Sección del Hero terminada

--- a/prepros.config
+++ b/prepros.config
@@ -912,6 +912,19 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "blog/blog1.pug",
+        "config": {
+          "customOutput": "blog1.html"
+        }
+      },
+      {
+        "file": "perfiles/jeremy.pug",
+        "config": {
+          "customOutput": "jeremy.html"
+        }
+      }
+    ]
   }
 }
