fase final de mis proyectos

--- a/prepros.config
+++ b/prepros.config
@@ -924,6 +924,12 @@
         "config": {
           "customOutput": "jeremy.html"
         }
+      },
+      {
+        "file": "sass/componentes/plantilla-perfil.sass",
+        "config": {
+          "customOutput": "css\\plantilla-perfil.css"
+        }
       }
     ]
   }
