no hay problema alguno en la muestra v.1

--- a/prepros.config
+++ b/prepros.config
@@ -920,6 +920,24 @@
         }
       },
       {
+        "file": "blog/blog2.pug",
+        "config": {
+          "customOutput": "blog2.html"
+        }
+      },
+      {
+        "file": "blog/blog3.pug",
+        "config": {
+          "customOutput": "blog3.html"
+        }
+      },
+      {
+        "file": "blog/blog4.pug",
+        "config": {
+          "customOutput": "blog4.html"
+        }
+      },
+      {
         "file": "perfiles/adhrian.pug",
         "config": {
           "customOutput": "adhrian.html"
