proyecto terminado xdd

--- a/prepros.config
+++ b/prepros.config
@@ -968,6 +968,12 @@
         }
       },
       {
+        "file": "perfiles/mirella.pug",
+        "config": {
+          "customOutput": "mirella.html"
+        }
+      },
+      {
         "file": "sass/componentes/plantilla-perfil.sass",
         "config": {
           "customOutput": "css\\plantilla-perfil.css"
