nuevo orden en el apartdado de blogs

--- a/prepros.config
+++ b/prepros.config
@@ -938,6 +938,12 @@
         }
       },
       {
+        "file": "blog/blog5.pug",
+        "config": {
+          "customOutput": "blog5.html"
+        }
+      },
+      {
         "file": "perfiles/adhrian.pug",
         "config": {
           "customOutput": "adhrian.html"
