agregando blog6 y blog7

--- a/prepros.config
+++ b/prepros.config
@@ -944,6 +944,18 @@
         }
       },
       {
+        "file": "blog/blog6.pug",
+        "config": {
+          "customOutput": "blog6.html"
+        }
+      },
+      {
+        "file": "blog/blog7.pug",
+        "config": {
+          "customOutput": "blog7.html"
+        }
+      },
+      {
         "file": "perfiles/adhrian.pug",
         "config": {
           "customOutput": "adhrian.html"
