entrada blog8 carrera el siglo

--- a/prepros.config
+++ b/prepros.config
@@ -956,6 +956,12 @@
         }
       },
       {
+        "file": "blog/blog8.pug",
+        "config": {
+          "customOutput": "blog8.html"
+        }
+      },
+      {
         "file": "perfiles/adhrian.pug",
         "config": {
           "customOutput": "adhrian.html"
